|     Method |     Mean |    Error |   StdDev |      Gen0 |      Gen1 |      Gen2 | Allocated |
|----------- |---------:|---------:|---------:|----------:|----------:|----------:|----------:|
|   Compress | 937.3 ms | 250.5 ms | 13.73 ms | 9000.0000 | 8000.0000 | 3000.0000 | 117.51 MB |
| Uncompress | 921.9 ms | 134.7 ms |  7.39 ms | 9000.0000 | 8000.0000 | 3000.0000 |  113.8 MB |

struct Pixel, Заранее подсчитать Alpha, Beta, Cosine
|     Method |     Mean |     Error |   StdDev |      Gen0 |      Gen1 |      Gen2 | Allocated |
|----------- |---------:|----------:|---------:|----------:|----------:|----------:|----------:|
|   Compress | 363.8 ms | 195.79 ms | 10.73 ms | 1000.0000 | 1000.0000 | 1000.0000 |  37.51 MB |
| Uncompress | 316.2 ms |  17.82 ms |  0.98 ms | 1000.0000 | 1000.0000 | 1000.0000 |  33.79 MB |

Huffman Построение дерева
|     Method |     Mean |    Error |  StdDev |      Gen0 |      Gen1 |      Gen2 | Allocated |
|----------- |---------:|---------:|--------:|----------:|----------:|----------:|----------:|
|   Compress | 228.4 ms | 10.37 ms | 0.57 ms |  333.3333 |  333.3333 |  333.3333 |  33.32 MB |
| Uncompress | 309.2 ms | 12.00 ms | 0.66 ms | 1000.0000 | 1000.0000 | 1000.0000 |  33.79 MB |

DCT1D
|     Method |     Mean |    Error |  StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|--------:|---------:|---------:|---------:|----------:|
|   Compress | 125.6 ms |  4.76 ms | 0.26 ms | 500.0000 | 500.0000 | 500.0000 |  33.32 MB |
| Uncompress | 163.4 ms | 21.05 ms | 1.15 ms | 500.0000 | 500.0000 | 500.0000 |  33.79 MB |

Matrix Unsafe
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 52.56 ms | 2.339 ms | 0.128 ms | 800.0000 | 800.0000 | 800.0000 |  33.32 MB |
| Uncompress | 72.38 ms | 4.032 ms | 0.221 ms | 714.2857 | 714.2857 | 714.2857 |  33.79 MB |