@@ -34,3 +34,10 @@ Matrix Unsafe
 |----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
 |   Compress | 52.56 ms | 2.339 ms | 0.128 ms | 800.0000 | 800.0000 | 800.0000 |  33.32 MB |
 | Uncompress | 72.38 ms | 4.032 ms | 0.221 ms | 714.2857 | 714.2857 | 714.2857 |  33.79 MB |
+
+Упрощеный Pixel, Массив вместо List 
+|     Method |     Mean |     Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
+|----------- |---------:|----------:|---------:|---------:|---------:|---------:|----------:|
+|   Compress | 45.92 ms | 31.613 ms | 1.733 ms | 727.2727 | 727.2727 | 727.2727 |  26.83 MB |
+| Uncompress | 68.69 ms |  1.795 ms | 0.098 ms | 714.2857 | 714.2857 | 714.2857 |  29.79 MB |
+
